--- a/seaborn绘图.ipynb
+++ b/seaborn绘图.ipynb
@@ -110,8 +110,8 @@
     "在启动 jupyter 之前现在终端设置代理\n",
     "\n",
     "```bash\n",
-    "set HTTP_PROXY=http://127.0.0.1:1080\n",
-    "set HTTPS_PROXY=http://127.0.0.1:1080\n",
+    "set HTTP_PROXY=http://127.0.0.1:2580\n",
+    "set HTTPS_PROXY=http://127.0.0.1:2580\n",
     "```\n",
     "\n",
     "然后拖动文件到终端启动文件即可使用代理访问\n"
@@ -164,15 +164,6 @@
     "    # sizes=(15, 200),#自定义数据点大小\n",
     "    col_wrap=2,\n",
     ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
    ]
   },
   {
@@ -590,6 +581,41 @@
     "# Draw the heatmap with the mask and correct aspect ratio\n",
     "sns.heatmap(corr, mask=mask, cmap=cmap, vmax=.3, center=0,\n",
     "            square=True, linewidths=.5, cbar_kws={\"shrink\": .5})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 多子图自定义"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "\n",
+    "sns.set_theme()\n",
+    "\n",
+    "# Generate an example radial datast\n",
+    "r = np.linspace(0, 10, num=100)\n",
+    "df = pd.DataFrame({'r': r, 'slow': r, 'medium': 2 * r, 'fast': 4 * r})\n",
+    "\n",
+    "# Convert the dataframe to long-form or \"tidy\" format\n",
+    "df = pd.melt(df, id_vars=['r'], var_name='speed', value_name='theta')\n",
+    "\n",
+    "# Set up a grid of axes with a polar projection\n",
+    "g = sns.FacetGrid(df, col=\"speed\", hue=\"speed\",\n",
+    "                  subplot_kws=dict(projection='polar'), height=4.5,\n",
+    "                  sharex=False, sharey=False, despine=False)\n",
+    "\n",
+    "# Draw a scatterplot onto each axes in the grid\n",
+    "g.map(sns.scatterplot, \"theta\", \"r\")\n"
    ]
   },
   {
