--- a/plt绘图.ipynb
+++ b/plt绘图.ipynb
@@ -510,7 +510,28 @@
     "# plt.savefig(\"./plt样图/scatter2010.png\", transparent=True,\n",
     "# dpi=300, bbox_inches='tight')\n",
     "#plt.savefig(\"./plt样图/散点图.png\", facecolor='white')\n",
-    "plt.show()\n"
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 多figure的绘制\n",
+    "用于创建大小不一致的子图，例如：\n",
+    "\n",
+    "\n",
+    "![plt绘图_1664868630290](https://gcore.jsdelivr.net/gh/kebuAAA/Picloud@main/plt绘图_1664868630290.png)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = mpl.figure.Figure(figsize=(8, 4))\n",
+    "sf1, sf2 = f.subfigures(1, 2) #subfigures"
    ]
   }
  ],
