--- a/seaborn绘图.ipynb
+++ b/seaborn绘图.ipynb
@@ -282,7 +282,7 @@
     }
    ],
    "source": [
-    "data = pd.read_excel('./datasets/历年地区生产总值.xlsx')\n",
+    "data = pd.read_excel('./raw_data/历年地区生产总值.xlsx')\n",
     "new_data = data.melt(id_vars=['年份'], var_name='产业类型', value_vars=[\n",
     "                     '第一产业', '第二产业', '第三产业'], value_name='产值')\n",
     "g = sns.relplot(new_data, kind='line', x='年份', y='产值',\n",
@@ -321,7 +321,7 @@
     }
    ],
    "source": [
-    "data = pd.read_excel('./datasets/desc-data.xlsx')\n",
+    "data = pd.read_excel('./raw_data/desc-data.xlsx')\n",
     "d = sns.displot(data, x=\"类型\", hue='纹饰'                # , fill=True\n",
     "                , shrink=.5                # ,bins=4#划分区间个数，也可以传入数字列表表示划分位置\n",
     "                , multiple=\"dodge\"  # 堆叠，dodge:分开\n",
@@ -397,7 +397,7 @@
     }
    ],
    "source": [
-    "data = pd.read_excel('./datasets/desc-data.xlsx')\n",
+    "data = pd.read_excel('./raw_data/desc-data.xlsx')\n",
     "data_melt = data.melt(id_vars=['文物编号', '类型'], var_name=[\n",
     "                      '化学成分'], value_vars=data.columns[6:-1], value_name='含量')\n",
     "d = sns.displot(data_melt,\n",
@@ -638,7 +638,7 @@
     }
    ],
    "source": [
-    "data = pd.read_excel('./datasets/desc-data.xlsx')\n",
+    "data = pd.read_excel('./raw_data/desc-data.xlsx')\n",
     "data_melt = data.melt(id_vars=['文物编号', '类型'], var_name=[\n",
     "                      '化学成分'], value_vars=data.columns[6:-1], value_name='含量')\n",
     "sns.catplot(data=data_melt, x=\"化学成分\", y=\"含量\", kind='strip'  # 'swarm'昆虫形状\n",
@@ -696,7 +696,7 @@
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "data = pd.read_excel('./datasets/desc-data.xlsx')\n",
+    "data = pd.read_excel('./raw_data/desc-data.xlsx')\n",
     "data_melt = data.melt(id_vars=['文物编号', '类型'], var_name=[\n",
     "                      '化学成分'], value_vars=data.columns[6:-1], value_name='含量')\n",
     "g = sns.catplot(data_melt\n",
@@ -744,7 +744,7 @@
    ],
    "source": [
     "# 纵向\n",
-    "data = pd.read_excel('./datasets/desc-data.xlsx')\n",
+    "data = pd.read_excel('./raw_data/desc-data.xlsx')\n",
     "data_melt = data.melt(id_vars=['文物编号', '类型'], var_name=[\n",
     "                      '化学成分'], value_vars=data.columns[6:-1], value_name='含量')\n",
     "data_mean = data_melt.groupby(['类型', '化学成分']).mean().reset_index()\n",
@@ -784,7 +784,7 @@
    ],
    "source": [
     "# 横向\n",
-    "data = pd.read_excel('./datasets/历年地区生产总值.xlsx')\n",
+    "data = pd.read_excel('./raw_data/历年地区生产总值.xlsx')\n",
     "g = sns.catplot(data=data, x='第一产业', y='年份', kind='bar',\n",
     "                orient='h', palette='pastel')\n",
     "g.savefig('./sns样图/分类横向条形图.png')\n"
@@ -831,7 +831,7 @@
     }
    ],
    "source": [
-    "data = pd.read_excel('./datasets/历年地区生产总值.xlsx')\n",
+    "data = pd.read_excel('./raw_data/历年地区生产总值.xlsx')\n",
     "(\n",
     "    so.Plot(data, x=\"第一产业\", y=\"年份\")\n",
     "    .add(so.Bar(), orient=\"y\")\n",
@@ -940,7 +940,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "df = pd.read_excel('./datasets/desc-data.xlsx')\n",
+    "df = pd.read_excel('./raw_data/desc-data.xlsx')\n",
     "corr = df.iloc[:, 6:-1].corr()\n",
     "# Generate a mask for the upper triangle\n",
     "mask = np.triu(np.ones_like(corr, dtype=bool))\n",
