--- a/plt绘图.ipynb
+++ b/plt绘图.ipynb
@@ -43,6 +43,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#提取图像中主要颜色\n",
+    "def get_main_color(img_path, num_colors=5, resize=150):\n",
+    "    '''\n",
+    "    imgh_path: 图片路径\n",
+    "    num_colors: 提取的主要颜色数量\n",
+    "    '''\n",
+    "    import cv2\n",
+    "    import numpy as np\n",
+    "    from PIL import Image \n",
+    "    image = Image.open(img_path)\n",
+    "    small_image = image.resize((resize, resize))\n",
+    "    result = small_image.convert(\n",
+    "        'P', palette=Image.Palette.ADAPTIVE, colors=num_colors)\n",
+    "    result = result.convert('RGB')\n",
+    "    main_colors = result.getcolors()\n",
+    "    col_extract = []\n",
+    "    for count, col in main_colors:\n",
+    "        col_extract.append([col[i]/255 for i in range(3)])\n",
+    "    return col_extract\n",
+    "\n",
+    "\n",
+    "img_path = '屏幕截图 2023-02-07 170035.png'\n",
+    "colors=get_main_color(img_path, num_colors=20, resize=80)\n",
+    "colors"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1310,7 +1342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
